@@ -1,8 +1,8 @@
 AC_PREREQ([2.69])
-AC_INIT([ax_at_check_pattern], [9], [luke@mewburn.net])
+AC_INIT([ax_at_check_pattern], [10], [luke@mewburn.net])
 
 AC_COPYRIGHT([[
-Copyright 2013-2015, Luke Mewburn <luke@mewburn.net>.
+Copyright 2013-2016, Luke Mewburn <luke@mewburn.net>.
 All rights reserved.
 ]])
 
