@@ -1,6 +1,6 @@
 # Signature of the current package.
 m4_define([AT_PACKAGE_NAME],      [ax_at_check_pattern])
 m4_define([AT_PACKAGE_TARNAME],   [ax_at_check_pattern])
-m4_define([AT_PACKAGE_VERSION],   [9])
-m4_define([AT_PACKAGE_STRING],    [ax_at_check_pattern 9])
+m4_define([AT_PACKAGE_VERSION],   [10])
+m4_define([AT_PACKAGE_STRING],    [ax_at_check_pattern 10])
 m4_define([AT_PACKAGE_BUGREPORT], [luke@mewburn.net])
